# agent_ata

./: .gitignore  README.md  docker-compose.yml
backend/: .env.sample  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/routers/: chats.py  knowledge.py  realtime.py
backend/app/schemas/: chat.py  knowledge.py
backend/app/services/: llm.py  voice.py
backend/app/storage/: vector_store.py
frontend/: .env.sample  index.html  package.json  tailwind.config.cjs
frontend/src/: App.tsx  styles.css
frontend/src/components/: CallPanel.tsx  ChatSidebar.tsx  ChatWindow.tsx  KnowledgeDrawer.tsx  MessageBubble.tsx
frontend/src/hooks/: useChatApi.ts
