[project]
name = "multimodal-backend"
version = "0.1.0"
description = "FastAPI backend for multimodal Groq + ElevenLabs chatbot"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "pydantic",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
develop = [
    "alembic",
    "black",
]
