[project]
name = "multimodal-backend"
version = "0.1.0"
description = "FastAPI backend for multimodal Groq + ElevenLabs chatbot"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "python-dotenv",
    "openai",
]

[project.optional-dependencies]
develop = [
    "alembic",
    "black",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
